--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
+PRISMIC_URL=https://your-repo-name.prismic.io/api/v2
+PRISMIC_TOKEN=your-access-token
+
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
