switched to cdn

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
-PRISMIC_URL=https://your-repo-name.prismic.io/api/v2
+PRISMIC_URL=https://your-repo-name.cdn.prismic.io/api/v2
 PRISMIC_TOKEN=your-access-token
 
 LOG_CHANNEL=stack
